--- a/guitar.html
+++ b/guitar.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Zen Lofi | Beats</title>
+    <title>Core 2 Interaction Project 4</title>
     <link rel="stylesheet" type="text/css" href="./assets/css/guitar.css">
     <meta name = "keywords" content = "HTML, Javascript, CSS, Codeer, 100DayOfCode." />
     <meta name = "description" content = "Music Player built with Vanilla Javascript." />
