--- a/guitar.html
+++ b/guitar.html
@@ -23,7 +23,7 @@
                     <h3>
                   
                             <ul class="link">
-                                <li><a href="./piano.html">Piano</a></li>
+                                <li><a href="./piano.html">Pianoo</a></li>
                                 <li><a href="./violin.html">Violin</a></li>
                                 <li><a href="./harp.html">Harp</a></li>
                                 <li><a href="./guitar.html">Guitar</a></li>
